--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,12 +2,51 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>ShowMeTheMoney</title>
+    <title>Show Me The Money</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" th:href="@{/css/index.css}">
 </head>
 <body>
-    <h1>Hi Xiao!</h1>
+<div class="container main-container py-5 text-center">
+    <h1 class="display-4 py-5">Show me the Stock</h1>
+    <form method="GET" class="form-outline" th:object="${search}" th:action="@{'/'}">
+        <input type="text" class="form-control" name="keyword" id="keyword" placeholder="Try your luck!"
+               th:value="${keyword}"/>
+    </form>
+
+    <div th:if="${stock != null}">
+        <div class="container mt-5 px-2">
+            <h4 class="mb-2">[[${stock.name}]]</h4>
+            <p>[[${stock.quote.lastTradeDateStr}]]</p>
+            <p>[[${stock.quote.lastTradeTimeStr}]]</p>
+            <table class="table table-light table-striped">
+                <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Symbol</th>
+                    <th scope="col">Day Low</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Day High</th>
+                    <th scope="col">Ask</th>
+                    <th scope="col">Bid</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>[[${stock.quote.symbol}]]</td>
+                    <td class="text-bold text-danger">[[${stock.quote.dayLow}]]</td>
+                    <td>[[${stock.quote.price}]]</td>
+                    <td class="text-bold text-success">[[${stock.quote.dayHigh}]]</td>
+                    <td>[[${stock.quote.ask}]]</td>
+                    <td>[[${stock.quote.bid}]]</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+
+</div>
 </body>
+<!-- Footer -->
+<div th:insert="~{components/footer :: footer}"></div>
 </html>
